Fixed SideBar alignment issue and Working on Scheduler

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -140,7 +140,10 @@
 
         .side {
           color: white !important;
-        
+        }
+
+        .governance {
+          margin-left: 0px !important;
         }
 
         .dis {
